<resources>
    <string name="app_name">EduOl</string>
    <string name="logo">logo</string>
    <string name="baca_cerita_menarik">Baca Cerita Menarik</string>
    <string name="cerita_dan_voice">Cerita dan Voice</string>
    <string name="ob1">OB1</string>
    <string name="dapatkan_pengetahuan_baru_mengenai_beberapa_cerita_di_nusantara">Dapatkan pengetahuan baru mengenai beberapa cerita di Nusantara</string>
    <string name="next">Next</string>
    <string name="selesaikan_game_untuk_mendapatkan_koin_tambahan">Selesaikan game untuk mendapatkan koin tambahan</string>
    <string name="game">GAME</string>
    <string name="mainkan_game_seru">Mainkan Game seru!</string>
    <string name="ob2">Ob2</string>
    <string name="video_animasi">VIDEO ANIMASI</string>
    <string name="banyak_animasi_cerita">Banyak Animasi Cerita</string>
    <string name="ada_animasi_cerita_yang_bisa_kalian_lihat_disini">Ada animasi cerita yang bisa kalian lihat disini</string>
    <string name="mulai">Mulai</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fbbtn">fbbtn</string>
    <string name="googlebtn">googlebtn</string>
    <string name="atau">atau</string>
    <string name="gambar_ob">gambar ob</string>
    <string name="skip">SKIP</string>
    <string name="ket">ket</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="masuk_dengan_akun_yang_sudah_kamu_miliki_atau_dengan_sosial_media_kamu">Masuk dengan akun yang sudah kamu miliki atau dengan sosial media kamu</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="atau_masuk_dengan">atau masuk dengan</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="selamat_anda_mendapatkan_10_koin_pertama_untuk_membaca_cerita_dan_kerjakan_kuis_untuk_membuka_cerita_lain">Selamat anda mendapatkan 10 koin pertama untuk membaca cerita dan kerjakan kuis untuk membuka cerita lain</string>
    <string name="selamat">selamat</string>
    <string name="lanjut">Lanjut</string>
    <string name="halo">Halo,</string>
    <string name="waisul_kuroni">Waisul Kuroni</string>
    <string name="cari_pilihanmu">Cari Pilihanmu</string>
    <string name="pencarian">pencarian</string>
    <string name="title_activity_cerita">CeritaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cerita">Cerita</string>
    <string name="homebutton">homebutton</string>
    <string name="profile">profile</string>
    <string name="favorite">favorite</string>
    <string name="ceritavoice">cerita</string>
    <string name="video">video</string>
    <string name="games">games</string>
    <string name="cari_cerita">cari Cerita</string>
    <string name="bacalah_soal_dengan_teliti_dan_pilih_jawaban_yang_tepat_klik_tombol_mulai_untuk_memulai_kuis">Bacalah soal dengan teliti dan pilih jawaban yang tepat. Klik tombol mulai untuk memulai kuis.</string>
    <string name="mulai">Mulai</string>
    <string name="peringatan">peringatan</string>
    <string name="backbtnlistkuis">backbtnlistkuis</string>
    <string name="listkuis">listkuis</string>
    <string name="gambar_3">gambar_3</string>
</resources>