<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".awal.Ob3Activity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="280dp"
        android:layout_height="270dp"
        android:layout_marginTop="41dp"
        android:contentDescription="@string/ob2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView28"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/imageView28"
        app:layout_constraintTop_toBottomOf="@+id/imageView28"
        app:layout_constraintVertical_bias="0.006"
        app:srcCompat="@drawable/ob3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="265dp"
        android:layout_height="32dp"
        android:text="@string/banyak_animasi_cerita"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="271dp"
        android:layout_height="58dp"
        android:text="@string/ada_animasi_cerita_yang_bisa_kalian_lihat_disini"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.035" />

    <Button
        android:id="@+id/btnob3mulai"
        android:layout_width="284dp"
        android:layout_height="68dp"
        android:width="300dp"
        android:background="@drawable/lanjut"
        android:backgroundTint="#FF910F"
        android:text="@string/mulai"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.128"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="136dp"
        android:layout_height="13dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/gambar_3"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/tiga" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/video_animasi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        app:srcCompat="@drawable/tulisan_video" />
</androidx.constraintlayout.widget.ConstraintLayout>