<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loreg.LoginActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="246dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:text="@string/masuk_dengan_akun_yang_sudah_kamu_miliki_atau_dengan_sosial_media_kamu"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="66dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/inpEmail"
        android:layout_width="323dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/boxinput"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="66dp"
        android:layout_height="20dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/regEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpEmail" />

    <EditText
        android:id="@+id/InpPass"
        android:layout_width="321dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/boxinput"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/inpEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inpEmail"
        app:layout_constraintTop_toBottomOf="@+id/inpEmail"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnMasuk"
        android:layout_width="247dp"
        android:layout_height="68dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/lanjut"
        android:text="@string/masuk"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InpPass"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="124dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/atau_masuk_dengan"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btnMasuk"
        app:layout_constraintStart_toStartOf="@+id/btnMasuk"
        app:layout_constraintTop_toBottomOf="@+id/btnMasuk" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/btnfb"
        android:layout_width="47dp"
        android:layout_height="46dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#ffffffff"
        app:circularflow_radiusInDP="12dp"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/fb"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/btngoogle"
        android:layout_width="47dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#ffffffff"
        app:circularflow_radiusInDP="12dp"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnfb"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/google"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="126dp"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        android:text="@string/belum_punya_akun"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btnfb"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/btnfb"
        app:layout_constraintTop_toBottomOf="@+id/btnfb" />

    <Button
        android:id="@+id/btndfr"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:layout_marginTop="11dp"
        android:backgroundTint="#00FFFFFF"
        android:drawablePadding="0dp"
        android:shadowColor="#ffffffff"
        android:text="@string/daftar"
        android:textColor="#DD2C00"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/btngoogle"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/btngoogle"
        tools:ignore="TouchTargetSizeCheck"
        tools:shadowColor="#FFFFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>