<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loreg.SelamatActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="357dp"
        android:layout_height="367dp"
        android:contentDescription="@string/selamat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/selamat" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="316dp"
        android:layout_height="70dp"
        android:layout_marginTop="12dp"
        android:text="@string/selamat_anda_mendapatkan_10_koin_pertama_untuk_membaca_cerita_dan_kerjakan_kuis_untuk_membuka_cerita_lain"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnlanjut"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:background="@drawable/lanjut"
        android:text="@string/lanjut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.174"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>